{{$NEXT}}

      [MISCELLANEOUS]

      - Demoted some warnings to notifications, for less noisy output.
      Use the --verbose option to see more diagnostic output.

0.09993   2014-05-02 17:43:41 America/Los_Angeles

      [INCOMPATILBE CHANGES]

      - The protocol used to communicate with a remote Pinto repository is now
      versioned with media types via the "Accept" header.  So if you upgrade
      to this version of pinto, you'll also need to upgrade pintod to this same
      version.  Going forward, the protocol will be versioned so that we
      can potentially support different versions of the client and server at
      the same time.  But for the time being, you'll get an exception telling
      you whether to upgrade your client (pinto) or the server (pintod).

      - The PINTO_COLORS and PINTO_COLOURS environment variables are deprecated
      in favor of PINTO_PALETTE.  You can still use the old names for now, but
      they will be removed in a future release.

      - When using the --all option with the "list" command, the default format
      shows the pin status as "?" (i.e. indeterminable) instead of showing the
      main module status.

      [BUG FIXES]

      - Colorization is now disabled by default when the output is being piped or
      redirected to a file.  This improves interoperability with tools like grep,
      sort, etc.  To force colorization, use the --color or --colour option.
      Fixes GH #155. Thanks @mar-kolya.

      - The "roots" will now include test and develop prereqs, since Pinto has no
      way of knowing how those distributions relate to your application. This
      fixes GH #158. Thanks @mar-kolya.

     - Fixed timezone.t test which would fail in some cases, ostensibly
     because the test environment would not allow us to open sockets
     (probably due to security reasons).  Thanks CPAN Testers.

      [ENHANCEMENTS]

      - When using the "add" command, the paths to the local archives can now be