@@ -8,6 +8,7 @@ use MooseX::Types::Moose qw(Bool ArrayRef Str);
 use MooseX::MarkAsMethods ( autoclean => 1 );
 
 use Pinto::Target;
+use Pinto::Util qw(throw);
 
 #------------------------------------------------------------------------------
 
@@ -23,7 +24,8 @@ has targets => (
     isa => ArrayRef [Str],
     traits   => ['Array'],
     handles  => { targets => 'elements' },
-    required => 1,
+    writer   => '_targets',
+    default  => sub { [] },
 );
 
 has do_pull => (
@@ -39,9 +41,38 @@ has mirror_uri => (
     lazy    => 1,
 );
 
+has all => (
+    is      => 'ro',
+    isa     => Bool,
+    default => 0,
+);
+
 #------------------------------------------------------------------------------
 
 with qw( Pinto::Role::Committable Pinto::Role::Puller Pinto::Role::Installer);
+
+#------------------------------------------------------------------------------
+
+sub BUILD {
+    my ($self) = @_;
+
+    throw "Cannot specify targets when the 'all' option is used"
+        if $self->all and $self->targets;
+
+    throw "Must specify targets or use the 'all' option"
+        unless $self->all or $self->targets;
+
+    throw "Cannot use 'do_pull' and 'all' options together"
+        if $self->all and $self->do_pull;
+
+    if ($self->all) {
+        my $stack = $self->repo->get_stack($self->stack);
+        my @packages = map {$_->package_name} $stack->head->registrations;
+        $self->_targets(\@packages);
+    }
+
+    return $self;
+}
 
 #------------------------------------------------------------------------------
 
