@@ -8,9 +8,11 @@ use MooseX::Types::Moose qw(Undef Bool HashRef ArrayRef Maybe Str);
 
 use File::Temp;
 use File::Which qw(which);
+use Term::ANSIColor;
 
 use Pinto::Result;
 use Pinto::Util qw(throw);
+use Pinto::Constants qw(:protocol);
 
 #------------------------------------------------------------------------------
 
@@ -27,6 +29,7 @@ has targets => (
     traits  => ['Array'],
     handles => { targets => 'elements' },
     default => sub { $_[0]->args->{targets} || [] },
+    writer  => '_targets',
     lazy    => 1,
 );
 
@@ -41,6 +44,12 @@ has mirror_uri => (
     isa     => Str,
     builder => '_build_mirror_uri',
     lazy    => 1,
+);
+
+has all => (
+    is      => 'ro',
+    isa     => Bool,
+    default => 0,
 );
 
 #------------------------------------------------------------------------------
@@ -71,6 +80,7 @@ around BUILDARGS => sub {
     my $args = $class->$orig(@_);
 
     # Intercept attributes from the action "args" hash
+    $args->{all}           = delete $args->{args}->{all}           || 0;
     $args->{do_pull}       = delete $args->{args}->{do_pull}       || 0;
     $args->{cpanm_options} = delete $args->{args}->{cpanm_options} || {};
 
@@ -78,22 +88,53 @@ around BUILDARGS => sub {
 };
 
 #------------------------------------------------------------------------------
+# Pinto::Role::Installer will handle installation after execute()
 
 override execute => sub {
     my ($self) = @_;
 
-    my $result;
-    if ( $self->do_pull ) {
+    $self->_pull_targets    if $self->do_pull;
+    $self->_get_all_targets if $self->all;
 
-        my $request = $self->_make_request( name => 'pull' );
-        $result = $self->_send_request( req => $request );
-
-        throw 'Failed to pull packages' if not $result->was_successful;
-    }
-
-    # Pinto::Role::Installer will handle installation after execute()
-    return defined $result ? $result : Pinto::Result->new;
+    return Pinto::Result->new;
 };
+
+#------------------------------------------------------------------------------
+
+sub _pull_targets {
+    my ($self) = @_;
+
+    my $request = $self->_make_request( name => 'pull' );
+    my $result = $self->_send_request( req => $request );
+
+    throw 'Failed to pull packages' if not $result->was_successful;
+
+    return $result;
+}
+
+#------------------------------------------------------------------------------
+
+sub _get_all_targets {
+    my ($self) = @_;
+
+    # This is a total hack because Pinto::Server doesn't have an API yet.  So
+    # we have to do crazy stuff like strip color from the command output to
+    # make it machine-readable.
+
+    delete $self->args->{targets};
+    $self->args->{format} = '%p';
+
+    my $request = $self->_make_request( name => 'list' );
+    my $response = $self->request( $request );
+
+    throw 'Failed to get target list' if not $response->is_success;
+
+    my @lines = split "\n", Term::ANSIColor::colorstrip($response->content);
+    my @targets = grep { $_ !~ $PINTO_PROTOCOL_DIAG_PREFIX } @lines;
+    $self->_targets(\@targets);
+
+    return $self;
+}
 
 #------------------------------------------------------------------------------
 
